infra/K8s/code-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - name: code-server
        image: lscr.io/linuxserver/code-server:latest
        volumeMounts:
          - name: my-nfs-storage
            mountPath: /config
            subPath: code-server
        ports:
        - containerPort: 8443
      volumes:
        - name: my-nfs-storage
          persistentVolumeClaim:
            claimName: nfs-pvc
