infra/K8s/code-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server-service
spec:
  selector:
    app: code-server 
  ports:
    - protocol: TCP
      port: 8443
      nodePort: 30000
  type: NodePort
