infra/K8s/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
        volumeMounts:
          - name: nfs-storage
            mountPath: /var/lib/grafana
            subPath: grafana
        ports:
        - containerPort: 3000
      volumes:
        - name: nfs-storage
          persistentVolumeClaim:
            claimName: nfs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: default
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      targetPort: 3000
      port: 3000
      nodePort: 30003
  type: NodePort
