infra/K8s/code-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - name: code-server
        image: lscr.io/linuxserver/code-server:latest
        volumeMounts:
          - name: my-nfs-storage
            mountPath: /config
            subPath: code-server
        ports:
        - containerPort: 8443
      volumes:
        - name: my-nfs-storage
          persistentVolumeClaim:
            claimName: nfs-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: code-server-service
            port:
              number: 6666
